# hcrl_orbit

./: .gitignore  pyproject.toml  setup.py
config/: extension.toml
docs/: CHANGELOG.rst  README.md
hcrl_orbit/: __init__.py
hcrl_orbit/assets/: __init__.py  go1.py
hcrl_orbit/locomotion/: __init__.py
hcrl_orbit/locomotion/navigation/: navigation_env_cfg.py
hcrl_orbit/locomotion/navigation/config/bumpybot/: flat_env_cfg.py
hcrl_orbit/locomotion/navigation/mdp/: __init__.py  commands.py  curriculums.py  rewards.py
hcrl_orbit/locomotion/test/config/mimic_test/: test_env_cfg.py
hcrl_orbit/locomotion/velocity/: __init__.py  biped_velocity_env_cfg.py
hcrl_orbit/locomotion/velocity/config/: __init__.py
hcrl_orbit/locomotion/velocity/config/draco/: __init__.py  flat_env_cfg.py  rough_env_cfg.py  wbc_env_cfg.py
hcrl_orbit/locomotion/velocity/mdp/: __init__.py  randomizations.py  rewards.py
hcrl_orbit/mdp/: __init__.py
hcrl_orbit/scripts/: record.py
hcrl_orbit/tasks/: __init__.py
hcrl_orbit/tasks/locomotion/: __init__.py  biped_velocity_env_cfg.py  velocity_env_cfg.py
hcrl_orbit/tasks/locomotion/config/draco/: rough_env_cfg.py
hcrl_orbit/tasks/locomotion/velocity/: biped_velocity_env_cfg.py  velocity_env_cfg.py
hcrl_orbit/tasks/navigation/mdp/: actions.py  terminations.py
orbit/hcrl/: __init__.py
orbit/hcrl/assets/: __init__.py  bumpybot.py  draco.py  go1.py  scenes.py
orbit/hcrl/tasks/locomotion/: __init__.py
orbit/hcrl/tasks/navigation/: __init__.py
scripts/: PIC_play.py  cli_args.py  play.py  train.py  wbc.py
(+93 files in other folders)
